[package]
name = "monitord-exporter"
version = "0.3.0"
authors = ["Cooper Ry Lees <me@cooperlees.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/cooperlees/monitord-exporter"
edition = "2021"
description = """
monitord-exporter ... let prometheus know how happy your systemd is! 😊
"""
categories = ["network-programming", "os::linux-apis"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
monitord = "0.9.0"
prometheus_exporter = "0.8"
signal-hook = "0.3.17"
tracing = "0.1"
tracing-core = "0.1"
tracing-glog = "0.4"
tracing-subscriber = "0.3"

[profile]
release = { strip = "symbols", lto = "thin", opt-level = "z" }
