[package]
name = "monitord-exporter"
version = "0.4.1"
authors = ["Cooper Ry Lees <me@cooperlees.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/cooperlees/monitord-exporter"
edition = "2021"
description = """
monitord-exporter ... let prometheus know how happy your systemd is! 😊
"""
categories = ["network-programming", "os::linux-apis"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
monitord = "0.17"
prometheus_exporter = "0.8"
signal-hook = "0.4.1"
tokio = { version = "1.41.0", feature = ["fs", "rt", "rt-multi-thread", "macros", "tracing", "time", "sync"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-glog = "0.4"
tracing-subscriber = "0.3"

[profile]
release = { strip = "symbols", lto = "thin", opt-level = "z" }
